:wrench: chore: setting eslint configs and added errorHandlerMiddleware

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,10 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "no-unused-vars":"off",
+      "import/no-unresolved":"off",
+      "import/extensions":"off",
+      "no-console":"off",
+      "import/no-extraneous-dependencies":"off"
     }
 }
