--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
+    "prisma": "^4.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
