--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@prisma/client": "^4.3.1",
     "cors": "^2.8.5",
     "cryptr": "^6.0.3",
     "dotenv": "^16.0.2",
